brought some code from simon, modified for musictaste. -utf-8 -auto viewport -title -favicon

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -1,2 +1,14 @@
 <!--hello world-->
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Tell browsers to use UTF-8 encoding , UTF-8 can render all chars-->
+    <meta charset="UTF-8" /> 
+    <!-- Tell browsers not to scale the viewport automatically, any device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Title of the page, SEO and when users bookmark -->
+    <title>Music Taste</title>
+    <!-- Favicon, small icon that appears in the browser tab/bokmark -->
+    <!-- add Favicon-->
+    <link rel="icon" href="favicon.ico" />
+</html>
