Added some structure, will continure to be more specific

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -11,4 +11,16 @@
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
     <link rel="icon" href="favicon.ico" />
+</head>
+<body>
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
+</body>
 </html>
