--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -14,7 +14,14 @@
 </head>
 <body>
     <header>
-
+        <h1>Music taste analyzer for Spotify</h1>
+        <nav>
+            <menu>
+                <li><a href="">Home</a></li>
+                <li><a href="">Play</a></li>
+                <li><a href="">Scores</a></li>
+                <li><a href="">About</a></li>
+            </menu>
     </header>
     <main>
 
