--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -17,13 +17,18 @@
         <h1>Music taste analyzer for Spotify</h1>
         <nav>
             <menu>
-                <li><a href="">Home</a></li>
-                <li><a href="">Play</a></li>
-                <li><a href="">Scores</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="analyze.html">Analyze</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
+                <li><a href="about.html">About</a></li>
             </menu>
     </header>
     <main>
+            <form action="https://accounts.spotify.com/authorize" method=""get>
+                <!--Add my actual clientID and secret-->>
+                <input type="hidden" name="client_id" value="">
+
+            </form>
 
     </main>
     <footer>
