finished footer, github link opens in new tab now

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -39,6 +39,8 @@
 
     </main>
     <footer>
+        <h3>Creator: Tyler Oustrich</h3>
+        <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
         
     </footer>
 </body>
