moved info to index.html instead of explain-start.html

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -24,6 +24,12 @@
             </menu>
     </header>
     <main>
+        <h2>Is your music taste basic?</h2>
+        <p>
+            This is a web application that will analyze your Spotify music taste and compare it to other users.
+            An algorithm will determine how basic your music taste is based on the popularity of the songs you listen to.
+            To get started, click the button below to log in with your Spotify account.
+        </p>
             <form action="https://accounts.spotify.com/authorize" method=""get>
                 <!--replace with my actual clientID and secret-->>
                 <input type="hidden" name="client_id" value="">
