added button for analyzing socre. added footer to explain-start.html

--- a/musictaste-html/explain-start.html
+++ b/musictaste-html/explain-start.html
@@ -24,6 +24,12 @@
     </header>
 
     <main>
-        
+        <button onclick="triggerAction()">Analyze my music taste</button>
+        <h4>Score____</h4>
     </main>
+    <footer>
+        <h3>Creator: Tyler Oustrich</h3>
+        <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
+        
+    </footer>
 </body>
