added comment of todo for login

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -30,6 +30,9 @@
             An algorithm will determine how basic your music taste is based on the popularity of the songs you listen to.
             To get started, click the button below to log in with your Spotify account.
         </p>
+
+        <!--ADD A DISPLAY NAME AND TIE IT TO THE SPOTIFY LOGIN FOR DATA STORAGE-->
+
             <form action="https://accounts.spotify.com/authorize" method=""get>
                 <!--replace with my actual clientID and secret-->>
                 <input type="hidden" name="client_id" value="">
