--- a/musictaste-html/explain-start.html
+++ b/musictaste-html/explain-start.html
@@ -24,8 +24,20 @@
     </header>
 
     <main>
+       
         <button onclick="triggerAction()">Analyze my music taste</button>
-        <h4>Score____</h4>
+
+        <div>
+            <!-- Websocket placeholder: analysis status -->
+            <p id="status">Waiting for analysis...</p>
+
+            <!-- Websocket placeholder: score -->
+            <h2>Your Score: <span id="score">---</span></h2>
+
+            <!-- Websocket placeholder: taste classification -->
+            <p>Your music taste is: <span id="taste">---</span></p>
+        </div>
+
     </main>
     <footer>
         <h3>Creator: Tyler Oustrich</h3>
