websocket placeholderfor leaderboard updates

--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -25,8 +25,9 @@
 
     <main>
         <h2>WHo is the most basic?</h2>
-        
+
         <ul id ="Leaderboard">
+            <!--websocket placeholder, for live leaderboard updates.-->
             <li>Loading...</li>
 
         </ul>
