--- a/musictaste-html/explain-start.html
+++ b/musictaste-html/explain-start.html
@@ -35,7 +35,7 @@
             <h2>Your Score: <span id="score">---</span></h2>
 
             <!-- Websocket placeholder: taste classification -->
-            <p>Your music taste is: <span id="taste">---</span></p>
+            <p>Your music taste is: <span id="taste">basic/unique</span></p>
         </div>
 
     </main>
