changeed file structure and added palceholder image

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -15,6 +15,8 @@
 <body>
     <header>
         <h1>Music taste analyzer for Spotify</h1>
+        <img src="musictaste.pdf" alt="musictaste.click logo" width="300">
+
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
