--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Music taste analyzer for Spotify</h1>
-        <img src="Musictaste.png" alt="musictaste.click logo" width="300">
+        <img src="musictaste.png" alt="musictaste.click logo" width="300">
 
         <nav>
             <menu>
