main par in about.html

--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -14,7 +14,10 @@
 <body> 
     <main>
         <p>
-            
+            placeholder
+        (Info about algorithm and how it works:)
+        ---
+
         </p>
     </main>
     <footer>
