added nav header to about.html body to

--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -12,6 +12,18 @@
     <link rel="icon" href="favicon.ico" />
 </head>
 <body> 
+    <header>
+        <h1>Music taste analyzer for Spotify</h1>
+        <img src="musictaste.png" alt="musictaste.click logo" width="300">
+
+        <nav>
+            <menu>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="analyze.html">Analyze</a></li>
+                <li><a href="leaderboard.html">Leaderboard</a></li>
+                <li><a href="about.html">About</a></li>
+            </menu>
+    </header>
     <main>
         <p>
             placeholder
