--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -56,5 +56,6 @@
         <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
         
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 </body>
 </html>
