--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -41,7 +41,7 @@
                 <!--replace with my actual clientID and secret-->>
                 <input type="hidden" name="client_id" value="">
                 <!--redirect url-->
-                <input type="hidden" name="redirect_uri" value="https://yourwebsite.com/callback">
+                <input type="hidden" name="redirect_uri" value="https://startup.musictaste.click/explain-start.html">
                 <!--access level i need from user-->
                 <input type="hidden" name="scope" value="user-library-read user-read-email">
                 <input type="hidden" name="response_type" value="code">
