--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -38,8 +38,8 @@
 
 
             <form action="https://accounts.spotify.com/authorize" method=""get>
-                <!--replace with my actual clientID and secret-->>
-                <input type="hidden" name="client_id" value="">
+                <!--replace with my actual clientID-->>
+                <input type="hidden" name="client_id" value="640a1bf34e8349a2b748b0e6c68dbec5">
                 <!--redirect url-->
                 <input type="hidden" name="redirect_uri" value="https://startup.musictaste.click/explain-start.html">
                 <!--access level i need from user-->
