changing from form to script tag

--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -37,6 +37,19 @@
         
 
 
+            <script>
+                clientId = '640a1bf34e8349a2b748b0e6c68dbec5';
+                redirectUrl = 'https://startup.musictaste.click/explain-start.html';
+                scopes = 'user-read-private user-read-email'
+
+
+
+
+
+            </script>
+
+
+
             <form action="https://accounts.spotify.com/authorize" method=""get>
                 <!--replace with my actual clientID-->>
                 <input type="hidden" name="client_id" value="640a1bf34e8349a2b748b0e6c68dbec5">
