--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -41,8 +41,10 @@
                 clientId = '640a1bf34e8349a2b748b0e6c68dbec5';
                 redirectUrl = 'https://startup.musictaste.click/explain-start.html';
                 scopes = 'user-read-private user-read-email'
-
-
+                document.getElementById('login-btn').addEventListener('click', () => {
+                const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&response_type=token&redirect_uri=${redirectUri}&scope=${scopes}`;
+                window.location = authUrl;
+                });
 
 
 
