--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -45,9 +45,11 @@
                 const authUrl = `https://accounts.spotify.com/authorize?client_id=${clientId}&response_type=token&redirect_uri=${redirectUri}&scope=${scopes}`;
                 window.location = authUrl;
                 });
+                function getTokenFromUrl() {
+                    const hash = window.location.hash;
 
-
-
+                    
+                }
             </script>
 
 
