--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -11,6 +11,7 @@
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body> 
     <header>
