--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -10,6 +10,8 @@
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+
 </head>
 <body> 
     <header>
