--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -15,7 +15,7 @@
 </head>
 <body> 
     <header>
-        <h1>Music taste analyzer for Spotify</h1>
+        <h1>Is your music taste basic?</h1>
         <img src="musictaste.png" alt="musictaste.click logo" width="300">
 
         <nav>
@@ -28,12 +28,12 @@
     </header>
     <main>
         <button id="login-btn">Login with Spotify</button>
-        <h2>Is your music taste basic?</h2>
+        <h2>Analyze your music taste<h2>
+            <h2>Compare with others</h2>
         <p>
-            This is a web application that will analyze your Spotify music taste and compare it to other users.
             An algorithm will determine how basic your music taste is based on the popularity of the songs you listen to.
             
-            To get started, click the button below to log in with your Spotify account.
+            To get started, click the button above to log in with your Spotify account.
         </p>
 
         <!--ADD A DISPLAY NAME AND TIE IT TO THE SPOTIFY LOGIN FOR DATA STORAGE-->
