--- a/musictaste-html/explain-start.html
+++ b/musictaste-html/explain-start.html
@@ -32,7 +32,7 @@
             <button id="analyze-btn">Analyze my music</button> 
         
             <!-- Websocket placeholder: analysis status -->
-            <p id="status">Waiting for analysis...</p>
+            <h2 id="status">Waiting for analysis...</h2>
 
             <!-- Websocket placeholder: score -->
             <h2>Your Score: <span id="score">---</span></h2>
