color of body background. typo in html for leaderboard

--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <h2>WHo is the most basic?</h2>
+        <h2>Who is the most basic?</h2>
 
         <ul id ="Leaderboard">
             <!--websocket placeholder, for live leaderboard updates.-->
