--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -20,7 +20,7 @@
 
         <nav>
             <menu>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Login</a></li>
                 <li><a href="explain-start.html">Analyze</a></li>
                 <li><a href="leaderboard.html">Leaderboard</a></li>
                 <li><a href="about.html">About</a></li>
