--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -10,14 +10,14 @@
     <title>Music Taste</title>
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body> 
-    <header>
-        <h1>Is your music taste basic?</h1>
-        <img src="musictaste.png" alt="musictaste.click logo" width="300">
-
+<body class="bg-dark text-light"> 
+    <header class="bg-dark text-light py-4 text-center">
+        <h1 class="display-4">Is your music taste basic?</h1>
+        <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;">
         <nav>
             <menu>
                 <li><a href="index.html">Login</a></li>
