--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -18,15 +18,16 @@
     <header class="bg-dark text-light py-4 text-center">
         <h1 class="display-4">Is your music taste basic?</h1>
         <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;">
-        <nav>
-            <menu>
-                <li><a href="index.html">Login</a></li>
-                <li><a href="explain-start.html">Analyze</a></li>
-                <li><a href="leaderboard.html">Leaderboard</a></li>
-                <li><a href="about.html">About</a></li>
-            </menu>
+        <nav class="navbar navbar-expand navbar-light">
+            <ul class="navbar-nav mx-auto gap-3">                
+                <li class="nav-item"><a href="index.html" class="nav-link fs-3 fw-bold text-dark">Login</a></li>
+                <li class="nav-item"><a href="explain-start.html" class="nav-link fs-3 fw-bold text-dark">Analyze</a></li>
+                <li class="nav-item"><a href="leaderboard.html" class="nav-link fs-3 fw-bold text-dark">Leaderboard</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link fs-3 fw-bold text-dark">About</a></li>
+            </ul>
     </header>
-    <main>
+
+    <main class="container my-5">
         <button id="login-btn">Login with Spotify</button>
         <h2>Analyze your music taste<h2>
             <h2>Compare with others</h2>
