--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -10,7 +10,7 @@
     <title>Music Taste</title>
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -18,20 +18,21 @@
     <header class="bg-dark text-light py-4 text-center">
         <h1 class="display-4">Is your music taste basic?</h1>
         <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;">
-        <nav class="navbar navbar-expand navbar-light">
+        <nav class="navbar navbar-expand navbar-dark">
             <ul class="navbar-nav mx-auto gap-3">                
-                <li class="nav-item"><a href="index.html" class="nav-link fs-3 fw-bold text-dark">Login</a></li>
-                <li class="nav-item"><a href="explain-start.html" class="nav-link fs-3 fw-bold text-dark">Analyze</a></li>
-                <li class="nav-item"><a href="leaderboard.html" class="nav-link fs-3 fw-bold text-dark">Leaderboard</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link fs-3 fw-bold text-dark">About</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link fs-3 fw-bold text-light">Login</a></li>
+                <li class="nav-item"><a href="explain-start.html" class="nav-link fs-3 fw-bold text-light">Analyze</a></li>
+                <li class="nav-item"><a href="leaderboard.html" class="nav-link fs-3 fw-bold text-light">Leaderboard</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link fs-3 fw-bold text-light">About</a></li>
             </ul>
+        </nav>
     </header>
 
     <main class="container my-5">
         <div class="row justify-content-center">
         <div class="col-md-8 bg-white text-dark rounded shadow p-4 text-center">
 
-            <button id="login-btn" class="btn btn-success btn-lg mb-4">Login with Spotify</button>        <h2>Analyze your music taste<h2>
+            <button id="login-btn" class="btn btn-success btn-lg mb-4">Login with Spotify</button>
                 <h2 class="h3">Analyze your music taste</h2>
                 <h2 class="h3">Compare with others</h2>
         <p class ="lead">
@@ -47,8 +48,7 @@
         <h3 class="h5">Creator: Tyler Oustrich</h3>
         <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank" class="text-success fw-bold">Github</a>
     </footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         clientId = '640a1bf34e8349a2b748b0e6c68dbec5';
         redirectUrl = 'https://startup.musictaste.click/explain-start.html';
