--- a/musictaste-html/index.html
+++ b/musictaste-html/index.html
@@ -11,7 +11,7 @@
     <!-- Favicon, small icon that appears in the browser tab/bokmark -->
     <!-- add Favicon-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="musictaste.ico" />
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-dark text-light"> 
@@ -44,7 +44,7 @@
         </div>
         </div>
     </main>
-    <footer class="bg-dark text-light text-center py-3 fixed-bottom">
+    <footer class="bg-light text-dark text-center py-3 fixed-bottom">
         <h3 class="h5">Creator: Tyler Oustrich</h3>
         <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank" class="text-success fw-bold">Github</a>
     </footer>
