--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title of the page, SEO and when users bookmark -->
     <title>Music Taste</title>
-    <!-- Favicon, small icon that appears in the browser tab/bokmark -->
-    <!-- add Favicon-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
 
@@ -42,4 +41,6 @@
         <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
         
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
