added proper nav,menu to all, started changing the rest of the sheets to look the smaa

--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -12,21 +12,22 @@
     <link rel="stylesheet" href="styles.css" />
 
 </head>
-<body>
-    <header>
-        <h1>Music taste analyzer for Spotify</h1>
-        <img src="musictaste.png" alt="musictaste.click logo" width="300">
+<body class="bg-dark text-light">
+    <header class="bg-dark text-light py-4 text-center">
+    <h1 class="display-4">Music taste analyzer for Spotify</h1>
+        <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;">
 
-        <nav>
-            <menu>
-                <li><a href="index.html">Login</a></li>
-                <li><a href="explain-start.html">Analyze</a></li>
-                <li><a href="leaderboard.html">Leaderboard</a></li>
-                <li><a href="about.html">About</a></li>
-            </menu>
+        <nav class="navbar navbar-expand navbar-dark"> 
+            <ul class="navbar-nav mx-auto gap-3"> 
+                <li class="nav-item"><a href="index.html" class="nav-link fs-3 fw-bold text-light">Login</a></li>
+                <li class="nav-item"><a href="explain-start.html" class="nav-link fs-3 fw-bold text-light">Analyze</a></li>
+                <li class="nav-item"><a href="leaderboard.html" class="nav-link fs-3 fw-bold text-light">Leaderboard</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link fs-3 fw-bold text-light">About</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
+    <main class = "bg-dark text-light text-center py-3 fixed-bottom">
         <h2>Who is the most basic?</h2>
 
         <ul id ="Leaderboard">
