--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -27,15 +27,18 @@
         </nav>
     </header>
 
-    <main class = "bg-dark text-light text-center py-3 fixed-bottom">
-        <h2>Who is the most basic?</h2>
-
-        <ul id ="Leaderboard">
-            <!--websocket placeholder, for live leaderboard updates.-->
-            <li>Loading...</li>
-
-        </ul>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 bg-white text-dark rounded shadow p-4 text-center">
+                <h2 class="h3">Leaderboard</h2>
+                <ul id="Leaderboard" class="list-unstyled"> 
+                    <!-- Websocket placeholder, for live leaderboard updates. -->
+                    <li>Loading...</li>
+                </ul>
+            </div>
+        </div>
     </main>
+
 
     <footer>
         <h3>Creator: Tyler Oustrich</h3>
