--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -26,14 +26,18 @@
         </nav>
     </header>
     
-    <main>
-        <p>
-            placeholder
-        (Info about algorithm and how it works:)
-        ---
-
-        </p>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 bg-white text-dark rounded shadow p-4 text-center">
+                <h2 class="h3">about</h2>
+                <p>placeholder
+                (Info about algorithm and how it works:)
+                ---
+                </p>
+            </div>
+        </div>
     </main>
+
     <footer>
         <h5>Creator: Tyler Oustrich</h5>
         <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
