--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -38,10 +38,9 @@
         </div>
     </main>
 
-    <footer>
-        <h5>Creator: Tyler Oustrich</h5>
-        <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank">Github</a>
-        
+    <footer class="bg-light text-dark text-center py-3 fixed-bottom">
+        <h3 class="h5">Creator: Tyler Oustrich</h3>
+        <a href="https://github.com/Ty-Oustrich?tab=repositories" target="_blank" class="text-success fw-bold">Github</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
