finished the about section, detaling the planned algorithm

--- a/musictaste-html/about.html
+++ b/musictaste-html/about.html
@@ -30,9 +30,9 @@
         <div class="row justify-content-center">
             <div class="col-md-8 bg-white text-dark rounded shadow p-4 text-center">
                 <h2 class="h3">about</h2>
-                <p>placeholder
-                (Info about algorithm and how it works:)
-                ---
+                <p> Your top 50 songs are compared to the top 50 songs on the current charts. For every song in both lists a point is added, meaning, you are more basic.
+                    If your top genres are the most popular genres, points are added.
+
                 </p>
             </div>
         </div>
