--- a/musictaste-html/explain-start.html
+++ b/musictaste-html/explain-start.html
@@ -11,12 +11,12 @@
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-dark text-light"> <!-- Added bg-dark text-light for dark theme -->
-    <header class="bg-dark text-light py-4 text-center"> <!-- Added Bootstrap classes -->
-        <h1 class="display-4">Music taste analyzer for Spotify</h1> <!-- Added display-4 for larger title -->
-        <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;"> <!-- Replaced width with Bootstrap classes -->
-        <nav class="navbar navbar-expand navbar-dark"> <!-- Converted to Bootstrap navbar -->
-            <ul class="navbar-nav mx-auto gap-3"> <!-- Replaced <menu> with navbar-nav -->
+<body class="bg-dark text-light"> 
+    <header class="bg-dark text-light py-4 text-center"> 
+        <h1 class="display-4">Music taste analyzer for Spotify</h1> 
+        <img src="musictaste.png" alt="musictaste.click logo" class="img-fluid rounded" style="max-width: 300px;"> 
+        <nav class="navbar navbar-expand navbar-dark">
+            <ul class="navbar-nav mx-auto gap-3">
                 <li class="nav-item"><a href="index.html" class="nav-link fs-3 fw-bold text-light">Login</a></li>
                 <li class="nav-item"><a href="explain-start.html" class="nav-link fs-3 fw-bold text-light">Analyze</a></li>
                 <li class="nav-item"><a href="leaderboard.html" class="nav-link fs-3 fw-bold text-light">Leaderboard</a></li>
