readme, and percentile placehollder

--- a/musictaste-html/leaderboard.html
+++ b/musictaste-html/leaderboard.html
@@ -26,10 +26,10 @@
             </ul>
         </nav>
     </header>
-
     <main class="container my-5">
         <div class="row justify-content-center">
             <div class="col-md-8 bg-white text-dark rounded shadow p-4 text-center">
+                <h2 class="h3">percentile placeholder</h2>
                 <h2 class="h3">Leaderboard</h2>
                 <ul id="Leaderboard" class="list-unstyled"> 
                     <!-- Websocket placeholder, for live leaderboard updates. -->
