--- a/musictaste/index.html
+++ b/musictaste/index.html
@@ -16,5 +16,5 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/app.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
 </body>
